[package]
name = "wootili-view"
version = "0.7.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wooting-rgb-sys = "0.3.5"
eframe = "0.29.1"
image = "0.25.4"
xcap = "0.0.14"
egui-notify = "0.17.0"
scorched = "0.5.3"
serde = { version = "1.0.210", features = ["derive"] }
ron = "0.8.1"
ver-cmp = "0.1.4"
libloading = "0.8.5"
