[package]
name = "wootili-view"
version = "0.7.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wooting-rgb-sys = "0.3.5"
eframe = "0.31.0"
image = "0.25.5"
xcap = "0.3.1"
egui-notify = "0.19.0"
scorched = "0.5.3"
serde = { version = "1.0.217", features = ["derive"] }
ron = "0.8.1"
ver-cmp = "0.1.4"
libloading = "0.8.6"
