[package]
name = "wootili-view"
version = "0.8.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wooting-rgb-sys = "0.3.5"
eframe = "0.31.1"
image = "0.25.5"
xcap = "0.4.0"
egui-notify = "0.19.0"
scorched = "0.5.3"
serde = { version = "1.0.219", features = ["derive"] }
ron = "0.9.0"
libloading = "0.8.6"
