[package]
name = "update_check"
version = "0.5.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.8", features = ["blocking"] }
serde_json = "1.0.128"
scorched = "0.5.3"
