[package]
name = "update_check"
version = "0.8.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.12", features = ["blocking"] }
serde_json = "1.0.139"
scorched = "0.5.3"
eframe = "0.31.0"
ver-cmp = "0.1.4"
